k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clouds-web
  namespace: default
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: clouds-web
  template:
    metadata:
      labels:
        app: clouds-web
    spec:
      containers:
      - name: clouds-web
        image: docker.io/YOUR_DOCKERHUB_USERNAME/clouds-web:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 3000
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 3000
        #   initialDelaySeconds: 5
        #   periodSeconds: 5
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      imagePullSecrets:
      - name: dockerhub-secret
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: clouds-web-service
  namespace: default
  labels:
    app: clouds-web
spec:
  type: NodePort
  #  type: LoadBalancer
  selector:
    app: clouds-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    nodePort: 80
    name: http
